--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/tp10.styles.css" asp-append-version="true" />
+    <script src="https://kit.fontawesome.com/5bc9d374bb.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Usuario" asp-action="Index">tp11 - Suarez Mauricio</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Usuario" asp-action="Index">Proyecto Final - Suarez Mauricio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,7 +21,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
                         <li class="nav-item">
                         <li class="nav-item">
@@ -33,13 +34,20 @@
                         @if(ViewContext.HttpContext.Session.GetString("Rol") == "administrador")
                         { //Solo el admin puede ver y editar la lista de usuarios
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Index">Usuario</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Index">Usuarios</a>
                             </li>
                         }
                     </ul>
-                        <button class="btn btn-danger">
-                            <a asp-controller="Login" asp-action="Desloguear" class="text-white">Cerrar sesion</a>
-                        </button>
+                        @if(ViewContext.HttpContext.Session.GetString("Nombre") == null)
+                        {
+                            <button class="btn btn-success">
+                                <a asp-controller="Login" asp-action="Index" class="text-white">Iniciar sesion</a>
+                            </button>
+                        } else{
+                            <button class="btn btn-danger">
+                                <a asp-controller="Login" asp-action="Desloguear" class="text-white">Cerrar sesion</a>
+                            </button>
+                        }
                 </div>
             </div>
         </nav>
