--- a/Views/Tablero/index.cshtml
+++ b/Views/Tablero/index.cshtml
@@ -11,7 +11,13 @@
     int idUsuarioLogueado = Convert.ToInt32(ViewContext.HttpContext.Session.GetString("Id"));
 }
 
-<table class="table table-striped table-bordered">
+<div class="container mt-4"> <!-- Agregado un contenedor para alinear el botón -->
+    <div class="row mb-3">
+        <div class="col">
+            <a class="btn btn-success" asp-controller="Tablero" asp-action="AgregarTablero">Agregar Tablero</a>
+        </div>
+</div>
+<table class="table table-striped table-bordered table-bordered-custom">
     <thead class="thead-dark">
         <tr> 
             @if(isAdmin)
@@ -56,9 +62,6 @@
 
     </tbody>
     <tfoot>
-        <td colspan="4">
-                <a class="btn btn-success" asp-controller="Tablero" asp-action="AgregarTablero">Agregar Tablero</a>
-        </td>
     </tfoot>
 </table>
 
