--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -5,8 +5,14 @@
 @using Tp11.ViewModels
 @model List<GetUsuarioViewModel>
 
-<h2>Lista Usuarios</h2>
+<h2>@ViewData["Title"]</h2>
 
+<div class="container mt-4"> <!-- Agregado un contenedor para alinear el botón -->
+    <div class="row mb-3">
+        <div class="col">
+            <a class="btn btn-success" asp-controller="Usuario" asp-action="AgregarUsuario">Agregar Usuario</a>
+        </div>
+</div>
 <table class="table table-striped table-bordered">
     <thead class="thead-dark">
         <tr>
@@ -23,15 +29,12 @@
                 <td>@usuario.Nombre</td>
                 <td>
                     <a class="btn btn-primary" asp-controller="Usuario" asp-action="EditarUsuario" asp-route-idUsuario="@usuario.Id">Editar</a>
-                    <a class="btn btn-danger" asp-controller="Usuario" asp-action="EliminarUsuario" asp-route-idUsuario="@usuario.Id" onclick="return confirm('¿Estas seguro que quieres eliminar el elemento?')">Eliminar</a>                      
+                    <a class="btn btn-danger" asp-controller="Usuario" asp-action="EliminarUsuario" asp-route-idUsuario="@usuario.Id">Eliminar</a>                      
                 </td>
             </tr>
         }
     </tbody>
     <tfoot>
-        <td colspan="4">
-            <a class="btn btn-success" asp-controller="Usuario" asp-action="AgregarUsuario">Agregar Usuario</a>
-        </td>
     </tfoot>
 </table>
 
