--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -34,6 +34,9 @@
                     <a class="btn btn-danger" asp-controller="Usuario" asp-action="EliminarUsuario" asp-route-idUsuario="@usuario.Id">
                         <i class="fas fa-trash-alt"></i> Eliminar
                     </a>                      
+                    <a class="btn btn-info" asp-controller="Tablero" asp-action="Index" asp-route-idUsuario="@usuario.Id">
+                        <i class="fas fa-clipboard-list"></i> Ver Tableros
+                    </a>
                 </td>
             </tr>
         }
