--- a/Views/Tablero/index.cshtml
+++ b/Views/Tablero/index.cshtml
@@ -4,7 +4,7 @@
 
 @using Tp11.ViewModels
 @using tp10.Models
-@model List<GetTableroViewModel> //Especifico q la view espera un obj de ese tipo, q podre usar con Model o con su nombre original
+@model GetTablerosViewModel//Especifico q la view espera un obj de ese tipo, q podre usar con Model o con su nombre original
 
 @{
     bool isAdmin = (ViewContext.HttpContext.Session.GetString("Rol") == "administrador");
@@ -12,20 +12,39 @@
 }
 
 <div class="container mt-4"> <!-- Agregado un contenedor para alinear el botón -->
-    <div class="row mb-3">
-        <div class="col">
-            <a class="btn btn-success" asp-controller="Tablero" asp-action="AgregarTablero">Agregar Tablero</a>
+    <div class="col">
+        <div class="btn-group" role="group">
+
+            <a class="btn btn-success mr-2" asp-controller="Tablero" asp-action="AgregarTablero">
+                <i class="fas fa-plus-circle"></i> Agregar Tablero
+            </a>
+            @if(Model.VerTablerosDeUsuarioIndividual)
+            {
+                @if(isAdmin){
+                    <a class="btn btn-info ml-2" asp-controller="Tablero" asp-action="Index">
+                        <i class="fas fa-list"></i> Ver todos los tableros
+                    </a>
+                } else if(!isAdmin) {
+                    <a class="btn btn-info ml-2" asp-controller="Tablero" asp-action="Index">
+                        <i class="fas fa-list"></i> Ver mis tableros
+                    </a>
+                }
+            }
         </div>
+    </div>  
 </div>
 <table class="table table-striped table-bordered">
     <thead class="thead-dark">
         <tr> 
-            @if(isAdmin)
+            @if(Model.VerTablerosDeUsuarioIndividual)
+            {
+                <th colspan="7" class="text-center display-5 text-primary font-weight-bold">Tableros de @Model.NombreUsuario</th>
+            } else if(isAdmin)
             {
                 <th colspan="7" class="text-center display-5 text-primary font-weight-bold">Todos los tableros</th>
-            } else
-            {
+            }else{
                 <th colspan="7" class="text-center display-5 text-primary font-weight-bold">Mis tableros / Tableros con tareas asignadas</th>
+
             }
         </tr>
         <tr>
@@ -38,7 +57,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var tablero in Model) // puedo usar tableros o Model
+        @foreach (var tablero in Model.ListaTableros) 
         {
             if(tablero.Nombre != null)// Si no me aparecen tableros vacios
             {
