--- a/Views/Tarea/Index.cshtml
+++ b/Views/Tarea/Index.cshtml
@@ -13,8 +13,26 @@
 <div class="container mt-4"> <!-- Agregado un contenedor para alinear el botón -->
     <div class="row mb-3">
         <div class="col">
-            <a class="btn btn-success" asp-controller="Tarea" asp-action="AgregarTarea">Agregar Tarea</a>
+            <div class="btn-group" role="group">
+
+            <a class="btn btn-success mr-2" asp-controller="Tarea" asp-action="AgregarTarea">
+                <i class="fas fa-plus-circle"></i> Agregar Tarea
+            </a>
+            @if(Model.VerTableroIndividual)
+            {
+                @if(isAdmin){
+                    <a class="btn btn-info ml-2" asp-controller="Tarea" asp-action="Index">
+                        <i class="fas fa-list"></i> Ver todas las tareas
+                    </a>
+                } else if(!isAdmin) {
+                    <a class="btn btn-info ml-2" asp-controller="Tarea" asp-action="Index">
+                        <i class="fas fa-list"></i> Ver mis tareas
+                    </a>
+                }
+            }
+            </div>
         </div>
+        
 </div>
 
 <table class="table table-striped table-bordered table-bordered-custom ">
@@ -69,14 +87,20 @@
                             </a>
                         }else if(idUsuarioLogueado == Model.IdPropietarioDelTablero){
                                  if(tarea.IdUsuarioAsignado!=0){ // Si ya esta asignada a un usuario
-                                    <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">Reasignar</a>
+                                    <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">
+                                        <i class="fas fa-sync-alt"></i>Resignar
+                                    </a>
                                 } else{
-                                    <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">Asignar</a>
+                                    <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">
+                                        <i class="fas fa-sync-alt"></i> Asignar
+                                    </a>
                                 }
                         }
 
                         @if(idUsuarioLogueado == tarea.IdUsuarioAsignado){   
-                            <a class="btn btn-primary" asp-controller="Tarea" asp-action="UpdateTarea" asp-route-idTarea="@tarea.Id">Actualizar Estado</a>
+                            <a class="btn btn-success" asp-controller="Tarea" asp-action="UpdateTarea" asp-route-idTarea="@tarea.Id">
+                                <i class="fas fa-check"></i> Actualizar Estado
+                            </a>
                         }
                     </td>
                 </tr>
@@ -100,13 +124,26 @@
                         <td>
                             @if(idUsuarioLogueado == tarea.IdUsuarioAsignado)
                             {
-                                <a class="btn btn-primary" asp-controller="Tarea" asp-action="UpdateTarea" asp-route-idTarea="@tarea.Id">Actualizar Estado</a>
-                                <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">Reasignar</a>
-                            } else if(tarea.IdUsuarioAsignado!=0){
-                                <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">Reasignar</a>
-                            } else{
-                                <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">Asignar</a>
+                                <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">
+                                    <i class="fas fa-sync-alt"></i> Reasignar
+                                </a>
+                                <a class="btn btn-success" asp-controller="Tarea" asp-action="UpdateTarea" asp-route-idTarea="@tarea.Id">
+                                    <i class="fas fa-check"></i> Actualizar Estado
+                                </a>
                             }
+                            else if(tarea.IdUsuarioAsignado != 0)
+                            {
+                                <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">
+                                    <i class="fas fa-sync-alt"></i> Reasignar
+                                </a>
+                            }
+                            else
+                            {
+                                <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">
+                                    <i class="fas fa-sync-alt"></i> Asignar
+                                </a>
+                            }
+
                         </td>
                     </tr>
                 }
