--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -5,13 +5,22 @@
 @using Tp11.ViewModels
 @model List<GetUsuarioViewModel>
 
+@{
+    bool isAdmin = (ViewContext.HttpContext.Session.GetString("Rol") == "administrador");
+    int idUsuarioLogueado = Convert.ToInt32(ViewContext.HttpContext.Session.GetString("Id"));
+}
+
 <h2>@ViewData["Title"]</h2>
 
 <div class="container mt-4"> <!-- Agregado un contenedor para alinear el botón -->
     <div class="row mb-3">
-        <div class="col">
-            <a class="btn btn-success" asp-controller="Usuario" asp-action="AgregarUsuario">Agregar Usuario</a>
-        </div>
+        @if(isAdmin){
+            <div class="col">
+                <a class="btn btn-success" asp-controller="Usuario" asp-action="AgregarUsuario">
+                    <i class="fas fa-plus-circle"></i> Agregar Usuario
+                </a>
+            </div>
+        }
 </div>
 <table class="table table-striped table-bordered">
     <thead class="thead-dark">
@@ -28,12 +37,14 @@
                 <td hidden>@usuario.Id</td>
                 <td>@usuario.Nombre</td>
                 <td>
-                    <a class="btn btn-primary" asp-controller="Usuario" asp-action="EditarUsuario" asp-route-idUsuario="@usuario.Id">
-                        <i class="fas fa-edit"></i> Editar
-                    </a>
-                    <a class="btn btn-danger" asp-controller="Usuario" asp-action="EliminarUsuario" asp-route-idUsuario="@usuario.Id">
-                        <i class="fas fa-trash-alt"></i> Eliminar
-                    </a>                      
+                    @if(isAdmin){
+                        <a class="btn btn-primary" asp-controller="Usuario" asp-action="EditarUsuario" asp-route-idUsuario="@usuario.Id">
+                            <i class="fas fa-edit"></i> Editar
+                        </a>
+                        <a class="btn btn-danger" asp-controller="Usuario" asp-action="EliminarUsuario" asp-route-idUsuario="@usuario.Id">
+                            <i class="fas fa-trash-alt"></i> Eliminar
+                        </a>                      
+                    }
                     <a class="btn btn-info" asp-controller="Tablero" asp-action="Index" asp-route-idUsuario="@usuario.Id">
                         <i class="fas fa-clipboard-list"></i> Ver Tableros
                     </a>
