--- a/Views/Tablero/agregarTablero.cshtml
+++ b/Views/Tablero/agregarTablero.cshtml
@@ -11,11 +11,11 @@
     <input hidden asp-for="@Model.IdUsuarioPropietario">
     <div class="form-group">
         <label asp-for="@Model.Nombre"></label>
-        <input asp-for="@Model.Nombre" class="form-control" id="nombre" />
+        <input asp-for="@Model.Nombre" class="form-control w-50" id="nombre" />
     </div>
     <div class="form-group">
         <label asp-for="@Model.Descripcion"></label>
-        <input asp-for="@Model.Descripcion" class="form-control" id="descripcion" />
+        <input asp-for="@Model.Descripcion" class="form-control w-50" id="descripcion" />
     </div>
     <button type="submit" class="btn btn-primary" >Enviar</button>
 </form>
