--- a/Views/Tarea/Index.cshtml
+++ b/Views/Tarea/Index.cshtml
@@ -3,12 +3,7 @@
 }
 
 @using Tp11.ViewModels
-@model GetTareasViewModel
-
-@{
-    bool isAdmin = (ViewContext.HttpContext.Session.GetString("Rol") == "administrador");
-    int idUsuarioLogueado = Convert.ToInt32(ViewContext.HttpContext.Session.GetString("Id"));
-}
+@model ListarTareasViewModel
 
 <div class="container mt-4"> <!-- Agregado un contenedor para alinear el botón -->
     <div class="row mb-3">
@@ -20,19 +15,18 @@
             </a>
             @if(Model.VerTableroIndividual)
             {
-                @if(isAdmin){
+                @if(Model.IsAdmin){
                     <a class="btn btn-info ml-2" asp-controller="Tarea" asp-action="Index">
                         <i class="fas fa-list"></i> Ver todas las tareas
                     </a>
-                } else if(!isAdmin) {
+                } else if(!Model.IsAdmin) {
                     <a class="btn btn-info ml-2" asp-controller="Tarea" asp-action="Index">
                         <i class="fas fa-list"></i> Ver mis tareas
                     </a>
                 }
             }
             </div>
-        </div>
-        
+        </div>      
 </div>
 
 <table class="table table-striped table-bordered table-bordered-custom ">
@@ -40,7 +34,7 @@
         @if(Model.VerTableroIndividual){
             <th colspan="7" class="text-center display-5 text-primary font-weight-bold">Tareas del tablero: @Model.NombreDelTablero</th>
         }else {
-            <th colspan="7" class="text-center display-5 text-primary font-weight-bold">@{ string titulo = isAdmin ? "Todas las tareas" : "Tareas asignadas"; } @titulo</th>
+            <th colspan="7" class="text-center display-5 text-primary font-weight-bold">@{ string titulo = Model.IsAdmin ? "Todas las tareas" : "Tareas de mis tableros / Tareas asignadas"; } @titulo</th>
         }
         <tr>
             <th hidden>ID</th>
@@ -51,20 +45,12 @@
             <th>Color</th>
             <th hidden>IdUsuarioAsignado</th>
             <th >Usuario Asignado</th>
+            <th>Propietario</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @{ List<GetTareaViewModel> tareas;
-            if(Model.VerTableroIndividual) 
-            {
-                tareas = Model.TareasFromTablerosDelUsuario;
-            } else if(isAdmin) { 
-                tareas = Model.TodasLasTareas;
-            }else {
-                tareas = Model.TareasAsignadasAlUsuario;
-            }
-            @foreach (var tarea in tareas)
+            @foreach (var tarea in Model.ListaTareas)
             {
                 <tr>
                     <td hidden>@tarea.Id</td>
@@ -74,10 +60,10 @@
                     <td>@tarea.Descripcion</td>
                     <td>@tarea.Color</td>
                     <td hidden>@tarea.IdUsuarioAsignado</td>
-                    <td >@(tarea.NombreUsuarioAsignado != null ? tarea.NombreUsuarioAsignado : "Sin asignar") </td>
-
+                    <td>@tarea.NombreUsuarioAsignado</td>
+                    <td>@tarea.NombreUsuarioPropietario</td>
                     <td>
-                        @if(isAdmin)
+                        @if(Model.IsAdmin)
                         {
                             <a class="btn btn-primary" asp-controller="Tarea" asp-action="UpdateTarea" asp-route-idTarea="@tarea.Id">
                                 <i class="fas fa-edit"></i> Editar
@@ -85,70 +71,25 @@
                             <a class="btn btn-danger" asp-controller="Tarea" asp-action="EliminarTarea" asp-route-idTarea="@tarea.Id" onclick="return confirm('¿Estás seguro que quieres eliminar el elemento?')">
                                 <i class="fas fa-trash-alt"></i> Eliminar
                             </a>
-                        }else if(idUsuarioLogueado == Model.IdPropietarioDelTablero){
-                                 if(tarea.IdUsuarioAsignado!=0){ // Si ya esta asignada a un usuario
-                                    <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">
-                                        <i class="fas fa-sync-alt"></i>Resignar
-                                    </a>
-                                } else{
-                                    <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">
-                                        <i class="fas fa-sync-alt"></i> Asignar
-                                    </a>
-                                }
+                        }else if(Model.IdUsuarioLogueado == tarea.IdPropietario){
+                            @if(tarea.IdUsuarioAsignado == -1){ // No fue asignada a nadie
+                                <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">
+                                    <i class="fas fa-sync-alt"></i>Asignar
+                                </a>    
+                            } else{
+                                <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">
+                                    <i class="fas fa-sync-alt"></i>Reasignar
+                                </a>   
+                            }
                         }
 
-                        @if(idUsuarioLogueado == tarea.IdUsuarioAsignado){   
+                        @if(Model.IdUsuarioLogueado == tarea.IdUsuarioAsignado){   
                             <a class="btn btn-success" asp-controller="Tarea" asp-action="UpdateTarea" asp-route-idTarea="@tarea.Id">
                                 <i class="fas fa-check"></i> Actualizar Estado
                             </a>
                         }
                     </td>
-                </tr>
-            }
-            
-            if(!isAdmin && !Model.VerTableroIndividual)// Si no es admin y no se pidio ver las tareas de un tablero especifico
-            {
-                <th colspan="7" class="text-center display-5 text-primary font-weight-bold">Tareas de mis tableros</th>
-                @foreach (var tarea in Model.TareasFromTablerosDelUsuario)
-                {
-                    <tr>
-                        <td hidden>@tarea.Id</td>
-                        <td hidden>@tarea.IdTablero</td>
-                        <td>@tarea.Nombre</td>
-                        <td>@(tarea.Estado.ToString())</td>
-                        <td>@tarea.Descripcion</td>
-                        <td>@tarea.Color</td>
-                        <td hidden>@tarea.IdUsuarioAsignado</td>
-                        <td >@(tarea.NombreUsuarioAsignado != null ? tarea.NombreUsuarioAsignado : "Sin asignar") </td>
-
-                        <td>
-                            @if(idUsuarioLogueado == tarea.IdUsuarioAsignado)
-                            {
-                                <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">
-                                    <i class="fas fa-sync-alt"></i> Reasignar
-                                </a>
-                                <a class="btn btn-success" asp-controller="Tarea" asp-action="UpdateTarea" asp-route-idTarea="@tarea.Id">
-                                    <i class="fas fa-check"></i> Actualizar Estado
-                                </a>
-                            }
-                            else if(tarea.IdUsuarioAsignado != 0)
-                            {
-                                <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">
-                                    <i class="fas fa-sync-alt"></i> Reasignar
-                                </a>
-                            }
-                            else
-                            {
-                                <a class="btn btn-primary" asp-controller="Tarea" asp-action="AsignarTarea" asp-route-idTarea="@tarea.Id">
-                                    <i class="fas fa-sync-alt"></i> Asignar
-                                </a>
-                            }
-
-                        </td>
-                    </tr>
-                }
-
-            }
+                </tr>            
         }
     </tbody>
     <tfoot>
