--- a/Views/Usuario/EditarUsuario.cshtml
+++ b/Views/Usuario/EditarUsuario.cshtml
@@ -6,25 +6,29 @@
 @model UpdateUsuarioViewModel
 
 <h1>@ViewData["Title"]</h1>
-<form asp-controller="Usuario" asp-action="EditarUsuarioFromForm" method="post">
+<form asp-controller="Usuario" class="FormPosition updateForm"  asp-action="EditarUsuarioFromForm" method="post">
     <input hidden asp-for="@Model.Id">
     <div class="form-group">
         <label asp-for="@Model.Nombre"></label>
-        <input asp-for="@Model.Nombre" class="form-control" id="nombre" />
+        <input asp-for="@Model.Nombre" class="form-control" id="nombre" value="@Model.Nombre" />
         <span asp-validation-for="@Model.Nombre" class="text-danger"></span> 
     </div>
     <div class="form-group">
         <label asp-for="@Model.Contrasenia"></label>
-        <input asp-for="@Model.Contrasenia" class="form-control" id="contrasenia" />
+            <input class="form-control w-50" asp-for="@Model.Contrasenia" type="password" value="@Model.Contrasenia">
         <span asp-validation-for="@Model.Contrasenia" class="text-danger"></span>   
     </div>
-    <div class="form-group">
-        <label asp-for="@Model.Rol"></label>
-        <select asp-for="@Model.Rol" asp-items="Html.GetEnumSelectList<Rol>()" class="form-control">
-            <option value="">Seleccionar Nivel</option>
-        </select>
-        <span asp-validation-for="@Model.Rol" class="text-danger"></span> 
-    </div>
+    @if(@Model.Id == @Model.IdUsuarioLogueado) {
+        <input hidden asp-for="@Model.Rol" />
+    }else {
+        <div class="form-group">
+            <label asp-for="@Model.Rol"></label>
+            <select asp-for="@Model.Rol" asp-items="Html.GetEnumSelectList<Rol>()" class="form-control">
+                <option value="">Seleccionar Nivel</option>
+            </select>
+            <span asp-validation-for="@Model.Rol" class="text-danger"></span> 
+        </div>
+    }
     <button type="submit" class="btn btn-primary" >Enviar</button>
 </form>
 
