--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -3,18 +3,14 @@
 }
 
 @using Tp11.ViewModels
-@model List<GetUsuarioViewModel>
+@model ListarUsuariosViewModel
 
-@{
-    bool isAdmin = (ViewContext.HttpContext.Session.GetString("Rol") == "administrador");
-    int idUsuarioLogueado = Convert.ToInt32(ViewContext.HttpContext.Session.GetString("Id"));
-}
 
 <h2>@ViewData["Title"]</h2>
 
 <div class="container mt-4"> <!-- Agregado un contenedor para alinear el botón -->
     <div class="row mb-3">
-        @if(isAdmin){
+        @if(Model.IsAdmin){
             <div class="col">
                 <a class="btn btn-success" asp-controller="Usuario" asp-action="AgregarUsuario">
                     <i class="fas fa-plus-circle"></i> Agregar Usuario
@@ -22,6 +18,7 @@
             </div>
         }
 </div>
+
 <table class="table table-striped table-bordered">
     <thead class="thead-dark">
         <tr>
@@ -31,19 +28,21 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var usuario in Model)
+        @foreach (var usuario in Model.ListaUsuarios)
         {
             <tr>
                 <td hidden>@usuario.Id</td>
                 <td>@usuario.Nombre</td>
                 <td>
-                    @if(isAdmin){
+                    @if(Model.IsAdmin){
                         <a class="btn btn-primary" asp-controller="Usuario" asp-action="EditarUsuario" asp-route-idUsuario="@usuario.Id">
                             <i class="fas fa-edit"></i> Editar
                         </a>
-                        <a class="btn btn-danger" asp-controller="Usuario" asp-action="EliminarUsuario" asp-route-idUsuario="@usuario.Id">
-                            <i class="fas fa-trash-alt"></i> Eliminar
-                        </a>                      
+                        @if(usuario.Id != Model.IdUsuarioLogueado){ // El admin no se puede eliminar a si mismo
+                            <a class="btn btn-danger" asp-controller="Usuario" asp-action="EliminarUsuario" asp-route-idUsuario="@usuario.Id">
+                                <i class="fas fa-trash-alt"></i> Eliminar
+                            </a>                      
+                        }
                     }
                     <a class="btn btn-info" asp-controller="Tablero" asp-action="Index" asp-route-idUsuario="@usuario.Id">
                         <i class="fas fa-clipboard-list"></i> Ver Tableros
